    - Bait Pottery Sherd -> Warm Ocean Ruins
    - Blade Pottery Sherd -> Ruins
    - Bloom Pottery Sherd -> Jungle Ruins
    - Bolt Pottery Sherd -> Jungle Ruins
    - Brewer Pottery Sherd -> Desert Well (No Change)
    - Bullseye Pottery Sherd -> Catacombs
    - Burn Pottery Sherd -> Badlands Ruins
    - Cluck Pottery Sherd -> Savanna Ruins
    - Crawl Pottery Sherd -> Savanna Ruins
    - Crescent Pottery Sherd -> Catacombs
    - Cultivator Pottery Sherd -> Ruins
    - Danger Pottery Sherd -> Desert Ruins
    - Drought Pottery Sherd -> Badlands Ruins
    - Eye Pottery Sherd -> Catacombs
    - Explorer Pottery Sherd -> Cold Ocean Ruins (No Change)
    - Focus Pottery Sherd -> Cold Ocean Ruins
    - Friend Pottery Sherd -> Trail Ruins (No Change)
    - Heart Pottery Sherd -> Trail Ruins (No Change)
    - Heartbreak Pottery Sherd -> Trail Ruins (No Change)
    - Height Pottery Sherd -> Deepslate Ruins
    - Howl Pottery Sherd -> Trail Ruins (No Change)
    - Hump Pottery Sherd -> Desert Ruins
    - Illuminator Pottery Sherd -> Deepslate Ruins
    - Incidence Pottery Sherd -> Cold Ocean Ruins
    - Lumber Pottery Sherd -> Ruins
    - Miner Pottery Sherd -> Deepslate Ruins
    - Mourner Pottery Sherd -> Deepslate Ruins
    - Navigator Pottery Sherd -> Jungle Ruins
    - Needles Pottery Sherd -> Desert Ruins
    - Plenty Pottery Sherd -> Catacombs
    - Plume Pottery Sherd -> Savanna Ruins
    - Prize Pottery Sherd -> Desert Pyramid (No Change)
    - Protection Pottery Sherd -> Trail Ruins
    - Sheaf Pottery Sherd -> Trail Ruins (No Change)
    - Shed Pottery Sherd -> Badlands Ruins
    - Shelter Pottery Sherd -> Savanna Ruins
    - Shine Pottery Sherd -> Desert Ruins
    - Shower Pottery Sherd -> Jungle Ruins
    - Spade Pottery Sherd -> Desert Pyramid
    - Sprout Pottery Sherd - Ruins
    - Skull Pottery Sherd -> Catacombs (DESERT PYRAMID NEEDS REPLACEMENT)
    - Snort Pottery Sherd -> Warm Ocean Ruins (No Change)
    - Vessel Pottery Sherd -> Cold Ocean Ruins