@@ -18,6 +18,7 @@
     "trailiertales:lumber_pottery_sherd",
     "trailiertales:navigator_pottery_sherd",
     "trailiertales:needles_pottery_sherd",
+    "trailiertales:omen_pottery_sherd",
     "trailiertales:plume_pottery_sherd",
     "trailiertales:protection_pottery_sherd",
     "trailiertales:shed_pottery_sherd",
