@@ -4,7 +4,7 @@
   "dimension_padding": 6,
   "liquid_settings": "ignore_waterlogging",
   "max_distance_from_center": 100,
-  "size": 18,
+  "size": 14,
   "spawn_overrides": {
     "monster": {
       "bounding_box": "piece",
