@@ -2,8 +2,8 @@
   "placement": {
     "type": "minecraft:random_spread",
     "salt": 1886497114,
-    "separation": 40,
-    "spacing": 85
+    "separation": 30,
+    "spacing": 65
   },
   "structures": [
     {
