@@ -37,6 +37,7 @@
   "item.trailiertales.lumber_pottery_sherd": "Lumber Pottery Sherd",
   "item.trailiertales.navigator_pottery_sherd": "Navigator Pottery Sherd",
   "item.trailiertales.needles_pottery_sherd": "Needles Pottery Sherd",
+  "item.trailiertales.omen_pottery_sherd": "Omen Pottery Sherd",
   "item.trailiertales.plume_pottery_sherd": "Plume Pottery Sherd",
   "item.trailiertales.protection_pottery_sherd": "Protection Pottery Sherd",
   "item.trailiertales.shed_pottery_sherd": "Shed Pottery Sherd",
